--- a/HomeDecor/Views/HomeDecor/Index.cshtml
+++ b/HomeDecor/Views/HomeDecor/Index.cshtml
@@ -1,17 +1,86 @@
-﻿@{
+﻿@model List<HomeDecor.Models.ProductDataModels>
+
+@{
     ViewData["Title"] = "Main page";
-    Url.Action("HomeProduct", "Mainpage");
 }
 
-<a asp-action="ProductDetail">this is main page</a>
+<div class="container-fluid px-1 py-5 mx-auto font-roboto">
+    <div class="row justify-content-center">
+        <div class="col-lg-12 text-center mb-4">
+            <h2>Explore Best Selling</h2>
+            <div>Offer up to @Model.Max(m => m.Discount_Percentage)% off</div>
+        </div>
+            <div class="col-md-10 col-sm-9">
+                @*<div class="card">*@
+                <div class="">
+                    <div class="row">
+                        @foreach (var obj in Model)
+                        {
+                            var CalcDiscount = obj.Discount_Percentage / 100;
+                            var SumTotal = obj.ProductPrice - (obj.ProductPrice * CalcDiscount);
 
-<div class="row justify-content-center">
-    <h1>Explore Best Selling</h1>
-    <div class="col-lg-12">
-        <div class="row">
-            <div class="col-lg-2">
-                <img src="" alt="" />
+                            <div class="col-md-6 col-lg-3 p-1" id="GetProductDetails" data-toggle="modal" data-target="#myModal">
+                                <div class="card card-1">
+                                    <div class="pr-3 row justify-content-end">
+                                        <div class="fa fa-heart like like-checked"></div>
+                                    </div>
+                                    <div class="product-pic">
+                                        <img src=@("../wwwroot/images/Products/" + obj.Pic_Path) />
+                                    </div>
+                                    <span id="product-name">@obj.ProductName</span>
+                                    <span class="text-uppercase" id="category">@obj.Catageory</span>
+
+                                    <div class="row px-3 justify-content-between">
+                                        @if (obj.Discount_Percentage != 0)
+                                        {
+                                            <span class="text-secondary text-decor-line-through">@(String.Format("${0:.00}", obj.ProductPrice))</span>
+                                            <span class="text-danger">@(String.Format("${0:.00}", SumTotal))</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="text-danger">@(String.Format("${0:.00}", SumTotal))</span>
+                                        }
+                                    </div>
+                                    <div class="stars">
+                                        <span class="fa fa-star star-active"></span>
+                                        <span class="fa fa-star star-active"></span>
+                                        <span class="fa fa-star star-active"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <p>Some text in the modal.</p>
+                <div class="col-lg-6">
+                    <img src="../wwwroot/images/Products/Butterfly_Shelf.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg-6">
+                    <span class="Productname"></span>
+                    <span class="Productdetail"></span>
+                    <span class="Catageory"></span>
+                    <span class="Catageory"></span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
     </div>
+</div>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script rel="stylesheet" type="text/css" href="~/css/mainproduct.css"></script>
+<script type="text/javascript" src="~/js/JavaScript.js"></script>
