--- a/HomeDecor/Views/HomeDecor/Index.cshtml
+++ b/HomeDecor/Views/HomeDecor/Index.cshtml
@@ -4,83 +4,159 @@
     ViewData["Title"] = "Main page";
 }
 
-<div class="container-fluid px-1 py-5 mx-auto font-roboto">
+<div class="container-fluid px-1 py-5 mx-auto">
     <div class="row justify-content-center">
         <div class="col-lg-12 text-center mb-4">
-            <h2>Explore Best Selling</h2>
-            <div>Offer up to @Model.Max(m => m.Discount_Percentage)% off</div>
+            <h2 class="font-weight-bold">Explore Best Selling</h2>
+            <div class="text-secondary">Offer up to @Model.Max(m => m.Discount_Percentage)% off</div>
         </div>
-            <div class="col-md-10 col-sm-9">
-                @*<div class="card">*@
-                <div class="">
-                    <div class="row">
-                        @foreach (var obj in Model)
-                        {
-                            var CalcDiscount = obj.Discount_Percentage / 100;
-                            var SumTotal = obj.ProductPrice - (obj.ProductPrice * CalcDiscount);
+        <div class="col-md-10 col-sm-9 col-lg-10 col-xl-8 col-8">
+            @*<div class="card">*@
+            <div class="row">
+                @foreach (var obj in Model)
+                {
+                    var CalcDiscount = obj.Discount_Percentage / 100;
+                    var SumTotal = obj.ProductPrice - (obj.ProductPrice * CalcDiscount);
+                    // 1 is default For count all score in productRatings Database
+                    var rating = Convert.ToInt32(obj.ProductScore / 1);
+                    Random rnd = new Random();
+                    var RandomCustomer = "(" + Convert.ToString(rnd.Next(1, 20)) + ")";
 
-                            <div class="col-md-6 col-lg-3 p-1" id="GetProductDetails" data-toggle="modal" data-target="#myModal">
-                                <div class="card card-1">
-                                    <div class="pr-3 row justify-content-end">
-                                        <div class="fa fa-heart like like-checked"></div>
-                                    </div>
-                                    <div class="product-pic">
-                                        <img src=@("../wwwroot/images/Products/" + obj.Pic_Path) />
-                                    </div>
-                                    <span id="product-name">@obj.ProductName</span>
-                                    <span class="text-uppercase" id="category">@obj.Catageory</span>
-
-                                    <div class="row px-3 justify-content-between">
-                                        @if (obj.Discount_Percentage != 0)
+                    <div class="col-md-6 col-lg-3 col-sm-10 mx-auto mx-md-0 p-1 pt-5 font-weight-bold Getproductdetails"
+                         @*onclick="PassDataTomodal($(this))"*@
+                         @*asp-controller="HomeDecor"
+                             asp-action="Index"
+                             asp-route-id="@(Convert.ToString(obj.ProductId))"*@
+                         title="@(Convert.ToString(obj.ProductId))"
+                         data-toggle="modal"
+                         data-target="#myModal">
+                        <div class="card">
+                            <div class="img-container">
+                                <div class="d-flex justify-content-between align-items-center p-2 first">
+                                    @if (obj.Discount_Percentage != 0)
+                                    {
+                                        <span class="sale-overlay">Sale</span>
+                                    }
+                                </div>
+                                <img class="img-fluid img-product" id="productImg" src=@("../images/Products/" + obj.Pic_Path) />
+                            </div>
+                            <span id="product-name">@obj.ProductName</span>
+                            <span class="text-uppercase fw-400 fs-14" id="category">@obj.Category</span>
+                            <span id="product-amount" class="d-none">@obj.Amount</span>
+                            <span id="product-unit" class="d-none">@obj.Unit</span>
+                            <span id="product-detail" class="d-none">@obj.Detail</span>
+                            <div class="stars">
+                                @if (rating == 0)
+                                {
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span>
+                                }
+                                else
+                                {
+                                    for (var staractive = 0; staractive < rating; staractive++)
+                                    {
+                                        if (staractive <= rating)
                                         {
-                                            <span class="text-secondary text-decor-line-through">@(String.Format("${0:.00}", obj.ProductPrice))</span>
-                                            <span class="text-danger">@(String.Format("${0:.00}", SumTotal))</span>
+                                            <span class="fa fa-star star-active"></span>
+
                                         }
                                         else
                                         {
-                                            <span class="text-danger">@(String.Format("${0:.00}", SumTotal))</span>
+                                            <span class="fa fa-star"></span>
                                         }
-                                    </div>
-                                    <div class="stars">
-                                        <span class="fa fa-star star-active"></span>
-                                        <span class="fa fa-star star-active"></span>
-                                        <span class="fa fa-star star-active"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
+                                    }
+                                    <span class="fw-400 fs-11">@RandomCustomer</span>
+                                }
+                            </div>
+                            <div class="row px-4 justify-content-start" id="Divprice">
+                                @if (obj.Discount_Percentage != 0)
+                                {
+
+                                <span class="text-secondary text-decor-line-through" id="Mainprice">
+                                    @(String.Format("${0:.00}", obj.ProductPrice))
+                                </span>
+                                <span class="text-danger" id="Discountprice">
+                                    @(String.Format(" ${0:.00}", SumTotal))
+                                </span>
+                                }
+                                else
+                                {
+                                    <span class="text-danger" id="Mainprice">@(String.Format("${0:.00}", SumTotal))</span>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog d-flex font-weight-bold">
+        <!-- Modal content-->
+        <!-- m- Mean Modal-->
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-11 col-md-6 pl-0 pr-0">
+                            <img src="" class="img-fluid img-product" id="m-productImg">
+                        </div>
+                        <div class="col-lg-6 col-12 col-md-6 col-xl-6 col-sm-11" style="line-height:2;">
+                            <div id="m-productname" class="fw-600 f-name"></div>
+                            <div id="m-productdetail" class="fw-400 f-category"></div>
+                            <div class="row f-detail">
+                                <div class="col-lg-6 col-6 pr-0 fw-600">Availability :</div>
+                                <div class="col-lg-6 col-6 fw-400 p-0" id="m-amount"></div>
+                            </div>
+                            <div class="row f-detail">
+                                <div class="col-lg-6 col-6 pr-0 fw-600">Category :</div>
+                                <div class="col-lg-6 col-6 fw-400 p-0" id="m-category"></div>
+                            </div>
+                            <div class="row f-detail">
+                                <div class="col-lg-6 col-6 fw-600 ">SKU :</div>
+                                <div class="col-lg-6 col-6 fw-400 p-0" id="m-stockunit"></div>
+                            </div>
+                            <div class="row pt-2 pl-4 justify-content-start">
+                                <div class="text-secondary text-decor-line-through" id="m-mainprice"></div>
+                                <div class="text-danger" id="m-discountprice"></div>
+                            </div>
+                            <div class="row pt-4 justify-content-lg-">
+                                <div >
+                                    <div class="input-group">
+                                        <span class="input-group-btn">
+                                            <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                                                <span class="glyphicon glyphicon-minus"></span>
+                                            </button>
+                                        </span>
+                                        <input type="text" name="quant[1]" class="form-control input-number text-center" id="amount-product" value="1" min="1" max="10" style="height:auto;">
+                                        <span class="input-group-btn">
+                                            <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                                                <span class="glyphicon glyphicon-plus"></span>
+                                            </button>
+                                        </span>
                                     </div>
                                 </div>
+                                <div>
+                                    <button type="button" class="btn btn-dark" id="add-product" data-dismiss="modal">Add To Cart</button>
+                                </div>
                             </div>
-                        }
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-<div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <p>Some text in the modal.</p>
-                <div class="col-lg-6">
-                    <img src="../wwwroot/images/Products/Butterfly_Shelf.jpg" class="img-fluid" />
-                </div>
-                <div class="col-lg-6">
-                    <span class="Productname"></span>
-                    <span class="Productdetail"></span>
-                    <span class="Catageory"></span>
-                    <span class="Catageory"></span>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-
-    </div>
 </div>
-<script src="~/js/site.js" asp-append-version="true"></script>
-<script rel="stylesheet" type="text/css" href="~/css/mainproduct.css"></script>
-<script type="text/javascript" src="~/js/JavaScript.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+
+</script>
+<script src="~/js/JavaScript.js"></script>
