--- a/HomeDecor/wwwroot/css/mainproduct.css
+++ b/HomeDecor/wwwroot/css/mainproduct.css
@@ -1,19 +1,24 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Lora&family=Roboto+Slab&display=swap');
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap'); 
+
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300
+}
 
 .sale-overlay {
-    background-color: #e03e3e;
-    position: absolute;
-    color: #fff;
+    padding: 5px;
+    background-color: red;
     border-radius: 5px;
-    right: 5px;
-    top: 5px;
-    font-size: 0.9rem;
+    color: #fff;
+    font-size: 14px;
+    height: 35px;
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
-.font-roboto {
-    font-family : 'Roboto', sans-serif;
-}
 
 .star-active {
     color: #FFCA28 !important
@@ -28,3 +33,146 @@
     text-decoration: line-through;
 }
 
+.fw-400{
+    font-weight: 400;
+}
+
+.fw-600{
+    font-weight: 600;
+}
+
+.fs-14{
+    font-size : 14px;
+}
+
+.fs-11{
+    font-size : 11px;
+}
+
+.img-container {
+    position: relative
+}
+
+    .img-container .first {
+        position: absolute;
+        width: 100%
+    }
+
+    .img-container img {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px
+    }
+
+.img-product {
+    width: 100%;
+    height: 319px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.card{
+    border:none!important;
+}
+
+
+.col-responsive {
+    max-width: 60%;
+}
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+
+
+    .modal-dialog {
+        max-width: 56%;
+    }
+
+    .img-product {
+        height: 276px;
+    }
+
+    .f-name{
+        font-size : 22px;
+    }
+
+    .f-category{
+        font-size: 16px;
+    }
+
+    .f-detail {
+        font-size: 14px;
+    }
+
+    .col-responsive {
+        max-width: 80%;
+    }
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+    .modal-dialog {
+        max-width: 68%;
+    }
+
+    .col-responsive {
+        max-width: 80%;
+    }
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+    .modal-dialog {
+        max-width: 80%;
+    }
+
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+    .modal-dialog {
+        max-width: 80%;
+    }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+    .modal-dialog {
+        max-width: 60%;
+    }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+    .modal-dialog {
+        max-width: 55%;
+    }
+}
