cmmt more responsive

--- a/HomeDecor/wwwroot/css/mainproduct.css
+++ b/HomeDecor/wwwroot/css/mainproduct.css
@@ -95,20 +95,49 @@ body {
         height: 276px;
     }
 
-    .f-name{
-        font-size : 22px;
+    .col-responsive {
+        max-width: 80%;
     }
 
-    .f-category{
+    h2 {
+        font-size: 33px;
+    }
+
+    p {
+        font-size: 22px;
+    }
+
+    .f-product-name, .f-divprice {
+        font-size: 18px;
+    }
+
+    .f-product-category {
         font-size: 16px;
     }
 
-    .f-detail {
-        font-size: 14px;
+    .f-name {
+        font-size: 22px;
     }
 
-    .col-responsive {
-        max-width: 80%;
+    .f-category {
+        font-size: 19px;
+    }
+
+    .f-detail {
+        font-size: 16px;
+    }
+
+    .f-price {
+        font-size: 18px;
+    }
+
+    #m-productImg {
+        height: 280px;
+    }
+
+    .m-custom {
+        margin-top: 2rem !important;
+        justify-content: left !important;
     }
 }
 
@@ -126,6 +155,46 @@ body {
     .col-responsive {
         max-width: 80%;
     }
+    h2 {
+        font-size: 33px;
+    }
+
+    p {
+        font-size: 22px;
+    }
+
+    .f-product-name, .f-divprice {
+        font-size: 20px;
+    }
+
+    .f-product-category {
+        font-size: 16px;
+    }
+
+    .f-name {
+        font-size: 22px;
+    }
+
+    .f-category {
+        font-size: 19px;
+    }
+
+    .f-detail {
+        font-size: 16px;
+    }
+
+    .f-price {
+        font-size: 18px;
+    }
+
+    #m-productImg {
+        height: 280px;
+    }
+
+    .m-custom {
+        margin-top: 2rem !important;
+        justify-content:left!important;
+    }
 }
 
 /* 
@@ -138,6 +207,44 @@ body {
     .modal-dialog {
         max-width: 80%;
     }
+    h2 {
+        font-size: 36px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    .f-product-name, .f-divprice {
+        font-size: 20px;
+    }
+    .f-product-category{
+        font-size:16px;
+    }
+
+    .f-name {
+        font-size: 17px;
+    }
+
+    .f-category {
+        font-size: 15px;
+    }
+
+    .f-detail {
+        font-size: 13px;
+    }
+
+    .f-price {
+        font-size: 15px;
+    }
+
+    #m-productImg {
+        height: 280px;
+    }
+
+    .m-custom {
+        margin-top: 6rem !important;
+    }
 
 }
 
@@ -149,7 +256,46 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
     .modal-dialog {
-        max-width: 80%;
+        max-width: 69%;
+    }
+    h2 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 17px;
+    }
+
+    .f-product-name, .f-divprice {
+        font-size: 16px;
+    }
+
+    .f-name {
+        font-size: 22px;
+    }
+
+    .f-category {
+        font-size: 16px;
+    }
+
+    .f-detail {
+        font-size: 14px;
+    }
+
+    .f-price {
+        font-size: 16px;
+    }
+
+    #m-productImg {
+        height: 280px;
+    }
+
+    .m-custom {
+        margin-top: 4rem !important;
+        justify-content: left !important;
+    }
+    #product-name{
+
     }
 }
 
@@ -163,6 +309,33 @@ body {
     .modal-dialog {
         max-width: 60%;
     }
+    h2 {
+        font-size: 22px;
+    }
+
+    p {
+        font-size: 14px;
+    }
+
+    .f-name {
+        font-size: 15px;
+    }
+
+    .f-category {
+        font-size: 13px;
+    }
+
+    .f-detail {
+        font-size: 11px;
+    }
+
+    .f-price {
+        font-size: 13px;
+    }
+
+    #m-productImg {
+        height: 200px;
+    }
 }
 
 /* 
@@ -175,4 +348,28 @@ body {
     .modal-dialog {
         max-width: 55%;
     }
+
+    h2 {
+        font-size: 20px;
+    }
+    p {
+        font-size: 13px;
+    }
+    .f-name {
+        font-size : 12px
+    }
+    .f-category {
+        font-size: 11px;
+    }
+    .f-detail {
+        font-size: 9px;
+    }
+    .f-price {
+        font-size: 11px;
+    }
+
+    #m-productImg{
+        height:200px;
+    }
+
 }
