--- a/HomeDecor/Views/HomeDecor/Index.cshtml
+++ b/HomeDecor/Views/HomeDecor/Index.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewData["Title"] = "Main page";
 }
-
 <div class="container-fluid px-1 py-5 mx-auto">
     <div class="row justify-content-center">
         <div class="col-lg-12 text-center mb-4">
             <h2 class="font-weight-bold">Explore Best Selling</h2>
-            <div class="text-secondary">Offer up to @Model.Max(m => m.Discount_Percentage)% off</div>
+            <p class="text-secondary">Offer up to @Model.Max(m => m.Discount_Percentage)% off</p>
         </div>
         <div class="col-md-10 col-sm-9 col-lg-10 col-xl-8 col-8">
             @*<div class="card">*@
@@ -40,8 +39,8 @@
                                 </div>
                                 <img class="img-fluid img-product" id="productImg" src=@("../images/Products/" + obj.Pic_Path) />
                             </div>
-                            <span id="product-name">@obj.ProductName</span>
-                            <span class="text-uppercase fw-400 fs-14" id="category">@obj.Category</span>
+                            <span class="f-product-name" id="product-name">@obj.ProductName</span>
+                            <span class="text-uppercase fw-400 f-product-category fs-14" id="category">@obj.Category</span>
                             <span id="product-amount" class="d-none">@obj.Amount</span>
                             <span id="product-unit" class="d-none">@obj.Unit</span>
                             <span id="product-detail" class="d-none">@obj.Detail</span>
@@ -71,16 +70,16 @@
                                     <span class="fw-400 fs-11">@RandomCustomer</span>
                                 }
                             </div>
-                            <div class="row px-4 justify-content-start" id="Divprice">
+                            <div class="row px-4 justify-content-start f-divprice" id="Divprice">
                                 @if (obj.Discount_Percentage != 0)
                                 {
 
-                                <span class="text-secondary text-decor-line-through" id="Mainprice">
-                                    @(String.Format("${0:.00}", obj.ProductPrice))
-                                </span>
-                                <span class="text-danger" id="Discountprice">
-                                    @(String.Format(" ${0:.00}", SumTotal))
-                                </span>
+                                    <span class="text-secondary text-decor-line-through" id="Mainprice">
+                                        @(String.Format("${0:.00}", obj.ProductPrice))
+                                    </span>
+                                    <span class="text-danger" id="Discountprice">
+                                        @(String.Format(" ${0:.00}", SumTotal))
+                                    </span>
                                 }
                                 else
                                 {
@@ -96,7 +95,7 @@
 </div>
 
 <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog d-flex font-weight-bold">
+    <div class="modal-dialog mx-auto mx-0 font-weight-bold">
         <!-- Modal content-->
         <!-- m- Mean Modal-->
         <div class="modal-content">
@@ -122,12 +121,12 @@
                                 <div class="col-lg-6 col-6 fw-600 ">SKU :</div>
                                 <div class="col-lg-6 col-6 fw-400 p-0" id="m-stockunit"></div>
                             </div>
-                            <div class="row pt-2 pl-4 justify-content-start">
+                            <div class="row pt-2 pl-4 f-price justify-content-start">
                                 <div class="text-secondary text-decor-line-through" id="m-mainprice"></div>
                                 <div class="text-danger" id="m-discountprice"></div>
                             </div>
-                            <div class="row pt-4 justify-content-lg-">
-                                <div >
+                            <div class="row pt-4 m-custom justify-content-lg-left justify-content-center">
+                                <div>
                                     <div class="input-group">
                                         <span class="input-group-btn">
                                             <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
